--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Telee MS</title>
+    <link href=”alloy-editor/assets/alloy-editor-ocean-min.css” rel=”stylesheet”>
+    <script>
+      window.ALLOYEDITOR_BASEPATH = 'alloy-editor/';
+      window.CKEDITOR_BASEPATH = 'alloy-editor/';
+    </script>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para executar esta aplicação.</noscript>
