build: migrating the entire project to typescript

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#E75656" />
     <title>Telee MS</title>
-    <link href=”alloy-editor/assets/alloy-editor-ocean-min.css” rel=”stylesheet”>
-    <script>
-      window.ALLOYEDITOR_BASEPATH = 'alloy-editor/';
-      window.CKEDITOR_BASEPATH = 'alloy-editor/';
-    </script>
   </head>
   <body>
-    <noscript>Você precisa habilitar o JavaScript para executar esta aplicação.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
